# pilan

./: .gitignore  README.md  docs.md  issues.md  roadmap.md  todo.md
client/: CMakeLists.txt  x86_64-musl.cmake
client/include/: client.hpp  client_storage_manager.hpp  paths.hpp
client/local_storage_test/: local1.txt  local2.txt
client/security/include/: crypto.hpp  secure_mem.hpp
client/security/src/: crypto.cpp
client/src/: client  client.cpp  client_storage_manager.cpp  main.cpp  paths.cpp
client/tak_tmp_path/: pilan.tak  tak.txt
image-files/: usercfg.txt
pi/: CMakeLists.txt  aarch64-musl.cmake  pilan-srvr  server  todo.md
pi/data/files/: local1.txt  local2.txt
pi/data/meta/: local1.txt.json  local2.txt.json
pi/include/: client_handling.hpp  logger.hpp  paths.hpp  server.hpp  server_storage_manager.hpp
pi/mdk_tmp_path/: mdk.txt  pilan.mdk
pi/pi_storage_test/: local1.txt
pi/security/include/: crypto.hpp  key_manager.hpp  secure_mem.hpp  secure_state.hpp
pi/security/src/: crypto.cpp  key_manager.cpp
pi/src/: client_handling.cpp  logger.cpp  main.cpp  paths.cpp  server  server.cpp  server_storage_manager.cpp
pi/tak_tmp_path/: pilan.tak
shared/include/: socket_stream_writer.hpp  storage_manager.hpp  stream_writer.hpp
shared/src/: storage_manager.cpp
